infrastructure/nightingale/nightingale-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: nightingale
  namespace: nightingale
spec:
  gateways:
    - istio-ingress/external-gateway
  hosts:
    - nightingale.example.com
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: nightingale.nightingale.svc.cluster.local
            port:
              number: 80
